--- a/ui.pug
+++ b/ui.pug
@@ -3,7 +3,7 @@ html(lang="en")
 
   head
     meta(charset="UTF-8")
-    title Screen Organizer
+    title Heavy Frame Organizer
     link(rel="stylesheet" href="styles.css")
 
   body
