--- a/src/ui.pug
+++ b/src/ui.pug
@@ -12,16 +12,19 @@ html(lang="en")
 			.form-container
 				.form-group
 					label(for="horizontalSpacing") Horizontal Spacing:
-					input#horizontalSpacing(type="number" value="500")
+					input#horizontalSpacing(type="number" value="500" autofocus)
 
 				.form-group 
 					label(for="verticalSpacing") Vertical Spacing:
 					input#verticalSpacing(type="number" value="500")
 
-			button#apply(onclick="applySpacing()" autofocus) Apply
+			button#apply(onclick="applySpacing()") Apply
 
 		script.
 			window.onload = function() {
+				// Set focus manually
+				document.getElementById("horizontalSpacing").focus();
+
 				window.onmessage = function(event) {
 					if (event.data.pluginMessage?.type === "load-spacing") {
 						document.getElementById("horizontalSpacing").value = event.data.pluginMessage.horizontalSpacing || 500;
